test: fix tests