@@ -150,7 +150,16 @@
                     <mainClass>br.com.loomi.orders.OrderProcessingApplication</mainClass>
                 </configuration>
             </plugin>
-            
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+                </configuration>
+            </plugin>
+
             <!-- JaCoCo para cobertura de código -->
             <plugin>
                 <groupId>org.jacoco</groupId>
